Change CSS layout to "absolut" to prevent map cutoff on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -37,18 +37,19 @@
   --color-basemap-tile: darkgray;
   --menu-radius: 3px;
   --menu-padding: 4px 12px;
+  --header-height: 54px;
 }
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
   font-family: "Sarabun", sans-serif;
 }
 
-main {
-  flex: 1;
+#map {
+  position: absolute;
+  top: var(--header-height);
+  bottom: 0;
+  width: 100%;
 }
 
 a {
@@ -60,7 +61,16 @@ a {
   display: flex;
   align-items: center;
   border-bottom: 1px solid var(--color-border);
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  height: var(--header-height);
+}
+
+/* direct children of header */
+.header > * {
   padding: 5px 10px;
 }
 
